refactor: modernize Java source files for Java 17 and Spring Boot 3.x compatibility
- MoviesController: migrate javax.validation to jakarta.validation
- Security: replace javax.security.cert with java.security.cert equivalents
- Encoder: replace sun.misc.BASE64Encoder with java.util.Base64
- Math: replace deprecated wrapper constructors with valueOf() calls,
  replace BigDecimal ROUND_ constants with RoundingMode enum

Co-authored-by: kirankumar <19821953+kirankumar15@users.noreply.github.com>